<resources>
    <string name="app_name">Anwesha</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <dimen name="event_height_per_hour">100dp</dimen>
    <string name="anwesha_portal">Anwesha Portal</string>
    <string name="sign_in_to">LOGIN</string>
    <string name="hint">xxxxxxxxx</string>
    <string name="anwesha_id">Email ID</string>
    <string name="dummy_text">xxxxxxxx</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="anweshisback">#anweshisback</string>
    <string name="invalid_id">Invalid ID</string>
    <string name="invalid_credentails">invalid_credentials</string>
    <string name="event_poster">Event Poster</string>
    <string name="location_of_event">Location of Event</string>
    <string name="events">Events</string>
    <string name="register_to">REGISTER</string>
    <string name="email_id">Email Id</string>
    <string name="enter_email">Email ID</string>
    <string name="contact_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_is_incorrect">password is incorrect</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already Registered? </string>
    <string name="anwesha_is_in_progress">Anwesha IIT PATNA </string>
    <string name="aaaaaa">COMING SOON…</string>
    <string name="register_for_campus_ambassador">Register For campus Ambassador</string>
    <string name="phone_number">Phone Number</string>
    <string name="gmail_com">gmail.com</string>
    <string name="full_name">Full Name</string>
    <string name="college_name">College Name</string>
    <string name="years_of_study">Years of Study</string>
    <string name="register">Register</string>
    <string name="referral">Referral Code</string>
    <string name="success">You have registered successfully for Campus Ambassador</string>
    <string name="follow_anwesha_on">Follow Anwesha on</string>
    <string name="user_ca_authentication">Is CA Authenticated</string>
    <string name="instagram">https://www.instagram.com/anwesha.iitp/</string>
    <string name="time">8:00 PM</string>
    <string name="eventName">Garba Night</string>
    <string name="eventTime">29 September 2022</string>
    <string name="todo">TODO</string>
    <string name="user_name">Praveen kumar</string>
    <string name="profile_menu">PROFILE</string>
    <string name="sponsors_menu">SPONSORS</string>
    <string name="team_menu">DEVELOPERS</string>
    <string name="feedback_menu">FEEDBACK</string>
    <string name="about_us_menu">ABOUT US</string>
    <string name="faq_menu">FAQ</string>
    <string name="log_out_menu">LOG OUT</string>
    <string name="campuss_ambassador_menu">CAMPUSS AMBASSADOR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BASE_URL">https://anweshabackend.xyz/</string>
    <string name="user_login_authentication">Is User Logged In</string>
    <string name="cookies">Cookies</string>
    <string name="anweshateam">Anwesha Team</string>
    <string name="user_type">User Type</string>
    <string name="user_types_prompt">Choose a User Type</string>
    <string name="elite_pass">https://pmny.in/mJs3IkpvufoA</string>
    <string name="pro_pass">https://pmny.in/LrfJCrtUy8S4</string>
    <string name="feedback">https://forms.gle/LD4gSRg9CaxEeAXK7</string>
    <string name="fest_passes">Fest Passes</string>
    <string name="hintMap">Select the Day and any location on the map to see the events.</string>
    <string name="aboutUs">Anwesha is the Annual Techno-Cultural-Management Extravaganza of Indian Institute of Technology Patna. The name Anwesha symbolizes, the quest for grandeur, opulence, creativity and perfection. Since its inception in 2010, it has turned out to be one of east India\'s biggest and most anticipated youth festivals, witnessing participation from all over the country. Anwesha puts forth an unparalleled multitude of events, meticulously fashioned to suit the interests of the computer geeks, gaming freaks, music and dance maniacs. The cultural delight of the fest, pro-nites, share the glamour of iconic rock bands, serenity of classical art forms and amusement of comedy shows.\n\n Anwesha 2023 is envisioned to be an innovative and cultural uplifting festival of togetherness in not just the state or region, but the whole nation. We have reimagined the lens through which we understand culture and celebration, deriving the cornerstones for this year\'s edition that shall drive forward our festival.</string>
    <string name="initiatives1"><![CDATA[EXPANDING THE CULTURAL LANDSCAPE & NURTURING INDEPENDENT TALENT]]></string>
    <string name="initiatives1txt"><![CDATA[With the expanding music palette of Indian audiences after the internet arrived, Anwesha 2023 is at the converging point to introduce independent music and art at college festivals. \n• We strive to expand the entire cultural landscape by introducing unconventional or less-explored forms of art and culture, such as graffiti & mural art, indie cinema, spoken word, calligraphy and much more.]]></string>
    <string name="initiatives2">CREATING A SUSTAINABLE FEST</string>
    <string name="initiatives2txt"><![CDATA[As a major festival with massive footfall, we are aware of the enormous resource consumption and consequent waste generated throughout this festival. Anwesha’23 shall focus on bringing a sustainable lifestyle & culture to the mainstream\nThis is a major concern for us, and thus we will be adopting a zero-waste model for our festival.]]></string>
    <string name="initiative3">CONNECTING BACK TO OUR ROOTS</string>
    <string name="initiatives3txt"><![CDATA[Anwesha values the role our local artisans, craftsmen and others play in our community. Our vision at Anwesha is a fest for everybody - one that embraces the lesser privileged gems of society.\n• The folk culture in Bihar is immense - from Madhubani to Yampuri, Jat-Jatin to bamboo & pottery craft; we would be delighted to accommodate it all in Anwesha 2k23.]]></string>
    <string name="initiatives4"><![CDATA[ENTERING UNEXPLORED DOMAINS: TECH & INNOVATION]]></string>
    <string name="initiatives4txt">• Being a premier technological institute of the nation, technology and innovation run in our blood. Thus we are on a constant quest for cutting edge technology to be integrated into our fest.\n• We are embarking on a journey to bring you the future through exciting concepts like the Metaverse, NFTs, and a festival passport.</string>
    <string name="qr_code">QR Code</string>
    <string name="meet_the_passionate_minds_behind_the_magic_of_our_college_fest_together_we_make_unforgettable_memories_happen">Meet the passionate minds behind the magic of our college fest. Together, we make unforgettable memories happen.</string>
    <string name="coordinator">Coordinator</string>
    <string name="fest_coordinator">Fest Coordinator</string>
    <string name="anwesha_team">anweshateam</string>
    <string-array name="user_types">
        <item>Student</item>
        <item>Not a Student</item>
        <item>Alumni</item>
        <item>Faculty</item>
    </string-array>
</resources>
