<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/sponsor"
        android:icon="@drawable/sponsor"
        android:title="@string/sponsors_menu" />
    <item
        android:id="@+id/ca"
        android:icon="@drawable/marketing"
        android:title="@string/campuss_ambassador_menu" />

    <item
        android:id="@+id/Team"
        android:icon="@drawable/team"
        android:title="@string/team_menu" />
    <item
        android:id="@+id/Feedback"
        android:icon="@drawable/feedback"
        android:title="@string/feedback_menu" />
    <item
        android:id="@+id/Abouts"
        android:icon="@drawable/about_us"
        android:title="@string/about_us_menu" />
    <item
        android:id="@+id/FAQ"
        android:icon="@drawable/faq"
        android:title="@string/faq_menu" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/log_out_menu" />


</menu>