<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutUsFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/aboutUsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About Us"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/aboutUsTxt"
        android:src="@drawable/about_us_line1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="15dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbarSize="0dp"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/anweshaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="Anwesha'23"
                android:textColor="#5a59ab"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/anweshaTxtCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/anweshaTxt"
                app:layout_constraintStart_toStartOf="parent"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/aboutUs"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/initiativesTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="Initiatives"
                android:textColor="#5a59ab"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/anweshaTxtCard" />

            <androidx.cardview.widget.CardView
                android:id="@+id/initiatives1TxtCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/initiativesTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:cardElevation="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/initiatives1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initiatives1"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/initiatives1txt"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/initiatives1"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/initiatives2TxtCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/initiatives1TxtCard"
                app:layout_constraintStart_toStartOf="parent"
                app:cardElevation="4dp"
                android:layout_marginTop="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/initiatives2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initiatives2"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/initiatives2txt"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/initiatives2"/>

                </androidx.constraintlayout.widget.ConstraintLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/initiatives3TxtCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/initiatives2TxtCard"
                app:layout_constraintStart_toStartOf="parent"
                app:cardElevation="4dp"
                android:layout_marginTop="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/initiatives3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initiative3"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/initiatives3txt"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/initiatives3"/>

                </androidx.constraintlayout.widget.ConstraintLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/initiatives4TxtCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/initiatives3TxtCard"
                app:layout_constraintStart_toStartOf="parent"
                app:cardElevation="4dp"
                android:layout_marginTop="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/initiatives4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initiatives4"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/initiatives4txt"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/initiatives4"/>

                </androidx.constraintlayout.widget.ConstraintLayout>



            </androidx.cardview.widget.CardView>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>