<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_marginVertical="10dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#FFFFFF">


            <TextView
                android:id="@+id/event_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/eventTime"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/eventPosterBorder"
                android:text="@string/eventName"
                android:textColor="#8C9EFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/path"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_below="@id/event_name"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@id/eventPosterBorder"
                android:contentDescription="@string/location_of_event"
                android:src="@drawable/path"
                app:layout_constraintStart_toStartOf="@+id/event_name"
                app:layout_constraintTop_toBottomOf="@+id/event_name" />

            <TextView
                android:id="@+id/event_venue"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_name"
                android:layout_toEndOf="@id/path"
                android:text="@string/eventName"
                android:textColor="#393636"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/path"
                app:layout_constraintStart_toEndOf="@+id/path"
                app:layout_constraintTop_toTopOf="@+id/path"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/event_start_time"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/path"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@id/eventPosterBorder"
                android:text="@string/eventTime"
                android:textColor="#393636"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/path"
                app:layout_constraintTop_toBottomOf="@+id/event_venue" />

            <TextView
                android:id="@+id/event_end_time"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/path"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@id/eventPosterBorder"
                android:text="@string/eventTime"
                android:textColor="#393636"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/path"
                app:layout_constraintTop_toBottomOf="@+id/event_start_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>